// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headings HeadingMain should match snapshot when have props 1`] = `
<h1
  className=""
>
  mockHeading
</h1>
`;

exports[`headings HeadingMain should match snapshot when no props 1`] = `
<h1
  className=""
>
  mockHeading
</h1>
`;

exports[`headings HeadingSecondary should match snapshot when have props 1`] = `
<h4
  className=""
>
  Mock Heading
</h4>
`;

exports[`headings HeadingSecondary should match snapshot when no props 1`] = `
<h4
  className=""
>
  Mock Heading
</h4>
`;

exports[`headings SubHeadingMain should match snapshot when have props 1`] = `
<h3
  className=""
>
  Mock Heading
</h3>
`;

exports[`headings SubHeadingMain should match snapshot when no props 1`] = `
<h3
  className=""
>
  Mock Heading
</h3>
`;

exports[`headings SubHeadingSecondary should match snapshot when have props 1`] = `
<h6
  className=""
>
  Mock Heading
</h6>
`;

exports[`headings SubHeadingSecondary should match snapshot when no props 1`] = `
<h6
  className=""
>
  Mock Heading
</h6>
`;
